Fix top border visible in split lists

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -111,17 +111,17 @@ $list-step-bullet-margin: $sph--x-large;
 }
 
 @mixin vf-list-item-divided {
-  box-shadow: inset 0px 1px 0px 0px $color-mid-x-light;
+  box-shadow: inset 0px -1px 0px 0px $color-mid-x-light;
   margin: 0;
   padding-bottom: $sph--large;
   padding-top: $sph--small;
 
-  &:first-child {
+  &:last-child {
     box-shadow: none;
   }
 
   .p-list--divided > .p-list__item:first-child {
-    box-shadow: inset 0px 1px 0px 0px $color-mid-x-light;
+    box-shadow: inset 0px -1px 0px 0px $color-mid-x-light;
   }
 }
 
